# Cleverly-Server-2.0

./: .env.example  .gitignore  Makefile  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt  wsgi.py
docs/: api_docs.html
src/cleverly/: app.py
src/cleverly/core/: config.py  security.py
src/cleverly/services/calendly/: data_extractor.py  events.py  invitees.py
src/cleverly/services/pipeline/: base.py  cold_email.py  data_pipeline.py
static/css/: dashboard.css
static/js/: dashboard.js
templates/: dashboard.html
